Removed links and path and redigned project to single page application and redigned navbar

--- a/drvo-coop/src/App.css
+++ b/drvo-coop/src/App.css
@@ -2,5 +2,11 @@
   text-align: center;
   height: 100%;
 }
-
+html{
+  scroll-behavior: smooth;
+}
+::-webkit-scrollbar {
+  width: 0;  /* Remove scrollbar space */
+  background: transparent;  /* Optional: just make scrollbar invisible */
+}
 
