Added data and logic to about us component

--- a/drvo-coop/src/App.css
+++ b/drvo-coop/src/App.css
@@ -2,11 +2,22 @@
   text-align: center;
   height: 100%;
 }
+
 html{
   scroll-behavior: smooth;
 }
+
 ::-webkit-scrollbar {
   width: 0;  /* Remove scrollbar space */
   background: transparent;  /* Optional: just make scrollbar invisible */
 }
 
+.anchor-link{
+  text-decoration: none;
+  color: black;
+}
+
+.anchor-link:hover{
+  text-decoration: none;
+  color: black;
+}
